[gd_scene load_steps=21 format=3 uid="uid://hr021abwwm8b"]

[ext_resource type="Script" uid="uid://cunpmy3a5ucf6" path="res://Objects/Pump/pump.gd" id="1_55ofu"]
[ext_resource type="Script" uid="uid://cc2dlnfftk7rx" path="res://Objects/Pump/PumpUpgrades/pump_upgrade.gd" id="2_uvhau"]
[ext_resource type="Resource" uid="uid://da41n65vhmlim" path="res://Objects/Pump/PumpUpgrades/speed_1.tres" id="3_2lgk4"]
[ext_resource type="Script" uid="uid://b25jflxjfg3ss" path="res://Objects/Pump/pump_buy.gd" id="3_d18j0"]
[ext_resource type="Resource" uid="uid://c1qn1hidnnvig" path="res://Objects/Pump/PumpUpgrades/speed_2.tres" id="4_6ybtv"]
[ext_resource type="Resource" uid="uid://dq4fvyul325yv" path="res://Objects/Pump/PumpUpgrades/speed_3.tres" id="5_xilsv"]
[ext_resource type="Resource" uid="uid://cjn3ajir16kx" path="res://Objects/Pump/PumpUpgrades/quality_1.tres" id="6_7nxrv"]
[ext_resource type="Resource" uid="uid://cghi5igy78rs" path="res://Objects/Pump/PumpUpgrades/quality_2.tres" id="7_2435t"]
[ext_resource type="Resource" uid="uid://bi1iaajindrpr" path="res://Objects/Pump/PumpUpgrades/quality_3.tres" id="8_1pin8"]
[ext_resource type="PackedScene" uid="uid://cpxoruyhd58wy" path="res://Art_Assets/Models/WaterPump/WaterPump.tscn" id="9_6ybtv"]
[ext_resource type="PackedScene" uid="uid://bjwdpc83ln71e" path="res://Art_Assets/Models/WaterPump/Barrier.tscn" id="10_xilsv"]
[ext_resource type="AudioStream" uid="uid://blany6o2ya8a2" path="res://Audio/Sfx/Pump/pump_built.wav" id="11_6ybtv"]
[ext_resource type="AudioStream" uid="uid://csci87kwyg66b" path="res://Audio/Sfx/Pump/pump_ambience.ogg" id="12_xilsv"]

[sub_resource type="BoxShape3D" id="BoxShape3D_7nxrv"]
size = Vector3(2.36292, 1.79218, 1.27551)

[sub_resource type="BoxShape3D" id="BoxShape3D_2435t"]
size = Vector3(2.36292, 1.79218, 0.147552)

[sub_resource type="Animation" id="Animation_xilsv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Geo/WaterPump:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, -10, 0)]
}

[sub_resource type="Animation" id="Animation_6ybtv"]
resource_name = "build"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Geo/WaterPump:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, -10, 0), Vector3(0, 2, 0), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7nxrv"]
_data = {
&"RESET": SubResource("Animation_xilsv"),
&"build": SubResource("Animation_6ybtv")
}

[sub_resource type="BoxShape3D" id="BoxShape3D_d18j0"]
size = Vector3(9.52997, 4.89913, 4.07233)

[sub_resource type="BoxShape3D" id="BoxShape3D_xilsv"]
size = Vector3(9.52997, 4.89913, 1.38773)

[node name="Pump" type="Node3D" node_paths=PackedStringArray("upgrade_markers")]
script = ExtResource("1_55ofu")
base_wps = 1.5
base_quality = 0.1
price = 10
speed_upgrades = Array[ExtResource("2_uvhau")]([ExtResource("3_2lgk4"), ExtResource("4_6ybtv"), ExtResource("5_xilsv")])
quality_upgrades = Array[ExtResource("2_uvhau")]([ExtResource("6_7nxrv"), ExtResource("7_2435t"), ExtResource("8_1pin8")])
upgrade_markers = [NodePath("Upgrades/Markers/Upgrade1"), NodePath("Upgrades/Markers/Upgrade2"), NodePath("Upgrades/Markers/Upgrade3"), NodePath("Upgrades/Markers/Upgrade4"), NodePath("Upgrades/Markers/Upgrade5")]

[node name="Geo" type="Node3D" parent="."]

[node name="WaterPump" parent="Geo" instance=ExtResource("9_6ybtv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -10, 0)

[node name="Sign" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 4.032)

[node name="Barrier" parent="Sign" instance=ExtResource("10_xilsv")]

[node name="BuyLabel" type="Label3D" parent="Sign"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.07198, 0)
billboard = 2
render_priority = -2
outline_render_priority = -3
text = "$xxx"
font_size = 60

[node name="PumpBuy" type="Area3D" parent="Sign" groups=["Interactable"]]
visible = false
collision_layer = 8
script = ExtResource("3_d18j0")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Sign/PumpBuy"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.000305176, 0.849823, 0.0088501)
shape = SubResource("BoxShape3D_7nxrv")

[node name="PumpBuy2" type="Area3D" parent="Sign" groups=["Interactable"]]
collision_layer = 8
script = ExtResource("3_d18j0")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Sign/PumpBuy2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.000305176, 0.849823, -0.00425673)
shape = SubResource("BoxShape3D_2435t")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_7nxrv")
}

[node name="Upgrades" type="Node3D" parent="."]

[node name="PumpUpgrade" type="Area3D" parent="Upgrades" groups=["Interactable"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.75, 2.25)
visible = false
collision_layer = 8

[node name="CollisionShape3D" type="CollisionShape3D" parent="Upgrades/PumpUpgrade"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0130873, -0.737714, 0.381044)
shape = SubResource("BoxShape3D_d18j0")

[node name="PumpUpgrade2" type="Area3D" parent="Upgrades" groups=["Interactable"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.75, 3.10393)
visible = false
collision_layer = 8

[node name="CollisionShape3D" type="CollisionShape3D" parent="Upgrades/PumpUpgrade2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0130873, -0.737714, -0.961257)
shape = SubResource("BoxShape3D_xilsv")

[node name="Markers" type="Node3D" parent="Upgrades"]

[node name="Upgrade1" type="Marker3D" parent="Upgrades/Markers"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.932, 1.193, 3.26)

[node name="Upgrade2" type="Marker3D" parent="Upgrades/Markers"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.463, 2.888, 2.904)

[node name="Upgrade3" type="Marker3D" parent="Upgrades/Markers"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.193, 3.26)

[node name="Upgrade4" type="Marker3D" parent="Upgrades/Markers"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.463, 2.888, 2.904)

[node name="Upgrade5" type="Marker3D" parent="Upgrades/Markers"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.932, 1.193, 3.26)

[node name="BuildAudio" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("11_6ybtv")
volume_db = -3.5
unit_size = 2.5
bus = &"Pumps"

[node name="Ambience" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("12_xilsv")
volume_db = -3.5
unit_size = 3.5
bus = &"Pumps"
